  - add V task leg Infobox #1767
  - PEV start wait/window times now have second accuraccy #1099
  - show station names in airspace details dialog
  - show squawk code in airspace details dialog
  - ability to send squawk code from airspace details dialog to transponder
  - add support for a dedicated north-up map page layout
  - the thermal assistant InfoBox is now clickable
  - Add support for multiple airspace files in UI
  - Add support for multiple waypoint files in UI
  - Add support for multiple  airfields or details waypoint in UI
  - QuickMenu: revamped look
  - QuickMenu: sane cursor control

* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* iOS
  - Improve audio support: prevent ducking and enable sound playback even when the phone is muted
* devices
  - Add driver for Condor 3
  - Add driver for LöFGREN variometer
  - Add driver for LX Navigation Eos / Era variometers
  - Add driver for Stratux
  - Flarm: parse flarm error messages (PFLAE) and display them
  - Flarm: add support for PowerFlarm configuration
  - PowerFlarm: make range / vrange configurable for adbs and pcas
  - PowerFlarm: support additional higher baud rates
  - LXNAV: parse acceleration/g-load from PLXVF sentence
  - LXNAV: Overload formula, use reference mass instead of dry mass
  - OpenVario: Overload formula, use reference mass instead of dry mass
  - Vaulter: use fraction instead of overload for ballast
  - Devices: Switch to manual MC when set via external Device
  - AirControlDisplay: Read-out transponder mode
  - Larus: Protocol 0.1.4 add OAT,GLoad,Circling/Cruise
  - SerialPorts: add 230400 baud support
  - Add port 4000 to tcp-client
* Polar: