@@ -81,6 +81,7 @@ The following people and organizations have contributed code to XCSoar:
  Piotr Gertz <piotr@piopawlu.net>
  Yorick Reum <xcsoar@yorickreum.de>
  Roland Niederhagen <ronald_niederhagen@freenet.de>
+ kobedegeest <kobedegeest@gmail.com>
 
 Documentation:
 
